--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="container-fluid text-center">
-    <img src="{{ "/assets/images/gedling-council-logo.jpg" | relative_url }}" class="mt-3 mb-3">
+    <img src="{{ "/assets/images/gedling-council-logo.jpg" | relative_url }}" alt="Gedling Borough Council" class="img-fluid mt-3 mb-3">
 
     <h1 class="mb-3">{{ page.title }}</h1>
 
