--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,8 +11,9 @@
     {% seo %}
   </head>
   <body>
+      <a class="visually-hidden-focusable" href="#content">Skip to main content</a>
       {% include header.html %}
-      <main>
+      <main id="content">
         <div class="container">
           <h2>Finding your collection schedule</h2>
           <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input your street name within the Gedling district area which will provide your collection weekday and schedule.</p>
