--- a/docs/_includes/garden-collections.html
+++ b/docs/_includes/garden-collections.html
@@ -11,7 +11,7 @@
                 <div class="schedule mb-3">
                     <h4><span class="visually-hidden">Schedule:</span> {{ schedule.name }}</h3>
                     <div class="d-grid gap-2 d-block d-md-inline-block">
-                        <a href="{{ schedule.ics }}" class="btn btn-primary" download>Download iCal</a>
+                        <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule"href="{{ schedule.ics }}" class="btn btn-primary" download>Download iCal</span></a>
                         <button id="{{ schedule.id }}" type="button" class="btn btn-secondary">Copy to clipboard</button>
                     </div>
 
