--- a/docs/_includes/garden-collections.html
+++ b/docs/_includes/garden-collections.html
@@ -2,7 +2,7 @@
 
 <p>Garden Waste Collections are an additional paid service and follow a different schedule.</p>
 
-<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for day in page.garden_collection %}
         <div class="col">
             <h3>{{ day[0] }}</h3>
@@ -10,8 +10,8 @@
             {% for schedule in day[1] %}
                 <div class="schedule mb-3">
                     <h4><span class="visually-hidden">Schedule:</span> {{ schedule.name }}</h3>
-                    <div class="d-grid gap-2 d-block d-md-inline-block">
-                        <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule"href="{{ schedule.ics }}" class="btn btn-primary" download>Download iCal</span></a>
+                    <div class="d-grid gap-2 d-block d-lg-flex">
+                        <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule" href="{{ schedule.ics }}" class="btn btn-primary" download>Download iCal</span></a>
                         <button id="{{ schedule.id }}" type="button" class="btn btn-secondary">Copy to clipboard</button>
                     </div>
 
