--- a/docs/_includes/garden-collections.html
+++ b/docs/_includes/garden-collections.html
@@ -1,6 +1,6 @@
 <h2 class="mt-4">Garden Waste Collections</h2>
 
-<p>Garden Waste Collections are an additional paid service and follow a different schedule.</p>
+<p>Garden Waste Collections are an additional paid service and follow a different schedule to refuse/recycling. There are a total of 10 schedules labelled A - J, with each weekday being assigned two schedules.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for day in page.garden_collection %}
