--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="container-fluid text-center">
-    <img src="{{ "/assets/images/gedling-council-logo.jpg" | relative_url }}" alt="Gedling Borough Council" class="img-fluid mt-3 mb-3">
+<header class="container-fluid text-center bg-black text-white py-4">
+    <img src="{{ "/assets/images/gedling-council-logo-white.png" | relative_url }}" alt="Gedling Borough Council" class="img-fluid mb-3" width="300">
 
     <h1 class="mb-3">{{ page.title }}</h1>
 
-    <p>These are <strong>unofficial</strong> iCal formatted calendars for the refuse collections, covering all schedules and areas within the Gedling, Nottingham district area.
-    <p>These are generated from the PDF calendar documents currently provided by Gedling Borough Council.</p>
+    <p>These are <strong>unofficial</strong> iCal formatted calendars for the refuse collections, covering all schedules within the Gedling, Nottingham district area.
+    <p class="mb-0">The calendars are generated from the PDF calendar format provided by Gedling Borough Council.</p>
 </header>
