--- a/docs/_includes/refuse-collections.html
+++ b/docs/_includes/refuse-collections.html
@@ -1,6 +1,6 @@
-<h2 class="mt-4">Refuse Collections</h2>
+<h2 class="mt-4">Refuse/Recycle Collections</h2>
 
-<p>There are a total of 20 different schedules depending on your area. These are labelled G1-G4 across each weekday.</p>
+<p>There are a total of 20 different schedules depending on your area. 4 schedules for each weekday labelled G1-G4.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for day in page.refuse_collection %}
