--- a/docs/_includes/refuse-collections.html
+++ b/docs/_includes/refuse-collections.html
@@ -1,6 +1,6 @@
-<h2 class="mt-4">Refuse/Recycle Collections</h2>
+<h2 class="mt-4">Refuse/Recycling Collections</h2>
 
-<p>There are a total of 20 different schedules depending on your area. 4 schedules for each weekday labelled G1-G4.</p>
+<p>There are a total of 20 different collection schedules. 4 schedules for each weekday labelled G1-G4.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for day in page.refuse_collection %}
@@ -12,7 +12,7 @@
                     <h4><span class="visually-hidden">Schedule:</span> {{ schedule.name }}</h3>
 
                     <div class="d-grid gap-2 d-block d-lg-flex">
-                        <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule" href="{{ schedule.ics }}" class="btn btn-primary" download>Download iCal</a>
+                        <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule" href="{{ schedule.ics }}" class="btn btn-gedling" download>Download iCal</a>
                         <button type="button" id="{{ schedule.id }}" class="btn btn-secondary">Copy to clipboard</button>
                     </div>
 
