--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | relative_url }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     {% seo %}
   </head>
@@ -16,14 +20,14 @@
       <main id="content" class="mt-3">
         <div class="container">
           <h2>Finding your collection schedule</h2>
-          <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district area which will provide the collection weekday and specific schedule for the area.</p>
-          <p>The calendar are hosted on GitHub, the "Download iCal" button provides the raw iCalendar data which you can save locally. The "copy to clipboard" button will put the path to .ics file for subscribing or using in other software.</p>
+          <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
+          <p>The calendars are hosted on GitHub, the "Download iCal" button provides the raw iCalendar data which you can save locally. The "copy to clipboard" button will provide the URL to the .ics file for subscribing or using in other software.</p>
 
           {% include refuse-collections.html %}
           {% include garden-collections.html %}
         </div>
       </main>
-      
+
       {% include footer.html %}
   </body>
 </html>
