Clarify download button action

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <div class="container">
           <h2>Finding your collection schedule</h2>
           <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
-          <p>The calendars are hosted on GitHub, the "Download iCal" button provides the raw iCalendar data which you can save locally. The "copy to clipboard" button will provide the URL to the .ics file for subscribing or using in other software.</p>
+          <p>The calendars are hosted on GitHub, the "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the URL to the .ics file for subscribing or using in other software.</p>
 
           {% include refuse-collections.html %}
           {% include garden-collections.html %}
