Update copy URL button label

--- a/_includes/refuse-collections.html
+++ b/_includes/refuse-collections.html
@@ -13,7 +13,7 @@
 
                     <div class="d-grid gap-2 d-block d-lg-flex">
                         <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule" href="{{ schedule.ics }}" class="btn btn-gedling" download>Download iCal</a>
-                        <button type="button" id="{{ schedule.id }}" class="btn btn-secondary">Copy to clipboard</button>
+                        <button type="button" id="{{ schedule.id }}" class="btn btn-secondary">Copy iCal URL</button>
                     </div>
 
                     <script>
