--- a/_includes/garden-collections.html
+++ b/_includes/garden-collections.html
@@ -12,7 +12,7 @@
                     <h4><span class="visually-hidden">Schedule:</span> {{ schedule.name }}</h3>
                     <div class="d-grid gap-2 d-block d-lg-flex">
                         <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} schedule" href="{{ schedule.ics }}" class="btn btn-gedling" download>Download iCal</span></a>
-                        <button id="{{ schedule.id }}" type="button" class="btn btn-secondary">Copy to clipboard</button>
+                        <button id="{{ schedule.id }}" type="button" class="btn btn-secondary">Copy iCal URL</button>
                     </div>
 
                     <script>
