--- a/_includes/garden-collections.html
+++ b/_includes/garden-collections.html
@@ -3,7 +3,7 @@
 <p><a href="https://www.gedling.gov.uk/rubbish/gardenwaste/">Garden Waste Collections</a> are an additional paid service and follow a different schedule to refuse/recycling. There are a total of 10 schedules labelled A - J, with each weekday being assigned two schedules.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-    {% for day in page.garden_collection %}
+    {% for day in site.data.calendars.garden_collection %}
         <div class="col">
             <h3>{{ day[0] }}</h3>
 
