--- a/_includes/refuse-collections.html
+++ b/_includes/refuse-collections.html
@@ -3,7 +3,7 @@
 <p>There are a total of 20 different collection schedules. 4 schedules for each weekday labelled G1-G4.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-    {% for day in page.refuse_collection %}
+    {% for day in site.data.calendars.refuse_collection %}
         <div class="col">
             <h3>{{ day[0] }}</h3>
 
