--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <div class="container">
           <h2>Finding your collection schedule</h2>
           <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
-          <p>The calendars are hosted on GitHub, the "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the URL to the .ics file for subscribing or using in other software.</p>
+          <p>The calendars are hosted within a GitHub repository and published through GitHub pages. The "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the URL to the .ics file for subscribing through calendar tools or using in other software that supports iCal.</p>
 
           {% include collection-schedules.html %}
 
