Fix syntax errors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
 
     <h1 class="mb-3">{{ page.title }}</h1>
 
-    <p>These are <strong>unofficial</strong> iCalendar formatted calendar files for the refuse collections, covering all schedules within the Gedling, Nottingham district area.
+    <p>These are <strong>unofficial</strong> iCalendar formatted calendar files for the refuse collections, covering all schedules within the Gedling, Nottingham district area.</p>
     <p class="mb-0">The calendars are generated from the PDF calendar format provided by Gedling Borough Council.</p>
 </header>
