--- a/_includes/collection-schedules.html
+++ b/_includes/collection-schedules.html
@@ -2,7 +2,7 @@
     <div class="collection {%- if forloop.first %} mb-5{% endif %}">
         <h2>{{ type.name }}</h2>
 
-        <p>{{ type.description|markdownify }}</p>
+        {{ type.description|markdownify }}
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
             {% for day in type.collections %}
@@ -11,9 +11,9 @@
 
                     {% for schedule in day[1] %}
                         <div class="schedule mb-4">
-                            <h4>{{ schedule.name }} Collection</h3>
+                            <h4>{{ schedule.name }} Collection</h4>
                             <div class="d-grid gap-2 d-block d-lg-flex">
-                                <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} collection" href="{{ schedule.ics }}" class="btn {%- if type.name == 'Refuse/Recycling Collections' %} btn-gedling{%- else %} btn-success{% endif %}" download>Download iCal</span></a>
+                                <a aria-label="Download iCal for {{ day[0] }} {{ schedule.name }} collection" href="{{ schedule.ics }}" class="btn {%- if type.name == 'Refuse/Recycling Collections' %} btn-gedling{%- else %} btn-success{% endif %}" download>Download iCal</a>
                                 <button id="{{ schedule.id }}" type="button" class="btn btn-secondary">Copy iCal URL</button>
                             </div>
 
@@ -31,9 +31,9 @@
                                     }
                                 });
                             </script>
-                        </div>
+                        </div><!--//.schedule-->
                     {% endfor %}
-                </div>
+                </div><!--//.col-->
             {% endfor %}
         </div><!--//.row-->
     </div>
@@ -43,13 +43,12 @@
     <div class="toast-container position-fixed top-0 end-0 p-3">
         <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
-            <strong class="me-auto">Calendar URL copied!</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                <strong class="me-auto">Calendar URL copied!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
-            The calendar URL for the schedule was copied to your clipboard.
+                The calendar URL for the schedule was copied to your clipboard.
             </div>
-        </div>
         </div>
     </div>
 </div>
