Deploy GTM container

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,29 @@
 
     {% seo %}
 
+    {% if jekyll.environment != 'production' %}
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth=J1DjljiZzoVaDdrd1ACJBw&gtm_preview=env-3&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-P3MHVNSB');</script>
+    {% else %}    
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-P3MHVNSB');</script>
+    {% endif %}
+
   </head>
   <body>
+    {% if jekyll.environment != 'production' %}
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3MHVNSB&gtm_auth=J1DjljiZzoVaDdrd1ACJBw&gtm_preview=env-3&gtm_cookies_win=x"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    {% else %}
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3MHVNSB"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    {% endif %}
       <a class="visually-hidden-focusable" href="#content">Skip to main content</a>
       {% include header.html %}
       <main id="content" class="mt-3">
