Add dataLayer for tracking purposes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
 
     {% seo %}
 
+    <script>
+      window.dataLayer = window.dataLayer || [];
+    </script>
+
     {% if jekyll.environment != 'production' %}
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
