--- a/_includes/collection-schedules.html
+++ b/_includes/collection-schedules.html
@@ -13,17 +13,27 @@
 
                     {% for schedule in day[1] %}
                         {% assign scheduleTitle = weekday|append: ' ' |append: schedule.name %}
+                        {% assign subscribe_id = 'url'|append: '_' |append: schedule.id %}
                         <div data-schedule-weekday="{{ weekday }}" data-schedule-name="{{ schedule.name }}" class="schedule mb-4">
                             <h4>{{ schedule.name }} Collection</h4>
                             <div class="d-grid gap-2 d-block d-lg-flex">
                                 <a id="ical_{{ schedule.id }}" data-schedule-title="iCal download {{ scheduleTitle }}" aria-label="Download iCal calendar for {{ scheduleTitle }} collection" href="{{ schedule.ics }}" class="btn {%- if type.name == 'Refuse/Recycling Collections' %} btn-gedling{%- else %} btn-success{% endif %}" download>Download iCal</a>
-                                <button data-schedule-title="iCal URL {{ scheduleTitle }}" id="url_{{ schedule.id }}" type="button" class="btn btn-secondary">Copy iCal URL</button>
+                                <button data-schedule-title="iCal URL {{ scheduleTitle }}" id="{{ subscribe_id }}" type="button" class="btn btn-secondary">Copy iCal URL</button>
                             </div>
 
                             <script>
-                                document.querySelector("button#{{ schedule.id }}").addEventListener('click', async () => {
+                                document.querySelector("button#{{ subscribe_id }}").addEventListener('click', async () => {
+
+                                    // Tracking for iCal URL/subscribe
+                                    window.dataLayer.push({
+                                        'event': 'bin_collection_calendar_subscribe',
+                                        'bin_type': "{{ type.name }}",
+                                        'bin_weekday':  "{{ weekday }}",
+                                        'bin_schedule': "{{ schedule.name }}"
+                                    });
+
                                     try {
-                                        await navigator.clipboard.writeText('{{ schedule.ics }}');
+                                        await navigator.clipboard.writeText('{{ site.url }}{{ schedule.ics }}');
                                         var toastElList = [].slice.call(document.querySelectorAll('.toast'));
                                         var toastList = toastElList.map(function(toastEl) {
                                             return new bootstrap.Toast(toastEl);
