Optimise SEO title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid text-center bg-black text-white py-4">
     <img src="{{ "/assets/images/gedling-council-logo-white.png" | relative_url }}" alt="Gedling Borough Council" class="img-fluid mb-3" width="300">
 
-    <h1 class="mb-3">{{ page.title }}</h1>
+    <h1 class="mb-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
 
     <p>These are <strong>unofficial</strong> iCalendar formatted calendar files for the refuse collections, covering all schedules within the Gedling, Nottingham district area.</p>
     <p class="mb-0">The calendars are generated from the PDF calendar format provided by Gedling Borough Council.</p>
