--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,6 @@
     {% seo title=false %}
     <title>{{ site.title|default: page.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,32 +20,35 @@
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth=J1DjljiZzoVaDdrd1ACJBw&gtm_preview=env-3&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-P3MHVNSB');</script>
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl+ '&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x';f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','{{ site.gtm.container_id }}');</script>
     {% else %}    
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-P3MHVNSB');</script>
+      })(window,document,'script','dataLayer','{{ site.gtm.container_id }}');</script>
     {% endif %}
 
   </head>
   <body>
     {% if jekyll.environment != 'production' %}
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3MHVNSB&gtm_auth=J1DjljiZzoVaDdrd1ACJBw&gtm_preview=env-3&gtm_cookies_win=x"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}&gtm_auth={{ site.gtm.auth }}&gtm_preview={{ site.gtm.preview }}&gtm_cookies_win=x"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {% else %}
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3MHVNSB"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm.container_id }}"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {% endif %}
       <a class="visually-hidden-focusable" href="#content">Skip to main content</a>
+
       {% include header.html %}
+
       <main id="content" class="mt-3">
         <div class="container">
           <h2>Finding your collection schedule</h2>
+
           <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
-          <p>The calendars are hosted within a GitHub repository and published through GitHub pages. The "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the URL to the .ics file for subscribing through calendar tools or using in other software that supports iCal.</p>
+          <p>The calendars provided are hosted within a GitHub repository and published through GitHub pages. The "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the public URL to the .ics file for subscribing through calendar software or for using as an endpoint in other software that supports the iCalendar format.</p>
 
           {% include collection-schedules.html %}
 
@@ -55,5 +56,7 @@
       </main>
 
       {% include footer.html %}
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
