--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,35 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+// Boostrap 5
+@import "bootstrap/scss/functions";
+
+$font-family-sans-serif: "Montserrat", sans-serif;
+
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
+
+$custom-colors: (
+    "gedling-red": #a9233e
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
+@import "bootstrap/scss/images";
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/close";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/toasts";
+@import "bootstrap/scss/helpers";
+@import "bootstrap/scss/utilities/api";
+
+// Custom
 @import "custom";
