--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 ---
 ---
 
+// Google fonts
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 // Boostrap 5
 @import "bootstrap/scss/functions";
 
